overflow  on resize fixed for all request options

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,3 +26,8 @@ body {
 .cm-editor.cm-focused {
   outline: none !important;
 }
+
+.cm-theme {
+  height: 100% !important;
+  overflow-y: auto;
+}
